k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestjs-template
  labels:
    app: nestjs-template
