k8s/node-deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-template
  namespace: nestjs-template
  labels:
    app: nestjs-template
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nestjs-template
  template:
    metadata:
      labels:
        app: nestjs-template
    spec:
      containers:
      - name: nestjs-template
        image: jbheber/nestjs-template:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
